# zk-protocol-experiments

./: Cargo.toml  README.md
examples/: zksnarks_circuit.rs
src/: error.rs  lib.rs
src/zksnarks/: mod.rs  prover.rs  verifier.rs
src/zksnarks/zkcircuits/: known_root.rs  mod.rs  secret_number.rs
