[package]
name = "zk-protocol-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
bellman = "0.14.0"
bls12_381 = "0.8.0"
ff = "0.13.0"
group = "0.13.0"
pairing = "0.23.0"
rand = "0.8.5"
derive_more = { version = "1.0.0", features = ["from", "display"] }
base64 = "0.22.1"
bytes = "1.7.1"
